k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: approot-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/app-root: /swagger
    #kubernetes.io/ingress.class: nginx  
spec:
  ingressClassName: nginx-example
  rules:  
  - host: localhost
    http:
      paths:
      - path: /WeatherForecast
        pathType: Prefix
        backend:
          service:
            name: weather-forecast-webapi-service
            port:
              number: 81
